--- a/index.html
+++ b/index.html
@@ -42,5 +42,202 @@
         >Preebook now <span><i class="fas fa-arrow-right"></i></span
       ></a>
     </header>
+
+    <!-- * ecommerce section  -->
+    <section class="ecommerce">
+      <img src="logos/Alibaba.svg" alt="" />
+      <img src="logos/Amazon.svg" alt="" />
+      <img src="logos/Daraz.pk Logo.svg" alt="" />
+      <img src="logos/Ebay.svg" alt="" />
+      <img src="logos/Rakuten.svg" alt="" />
+      <img src="logos/Rakuten.svg" alt="" />
+      <img src="logos/Target.svg" alt="" />
+      <img src="logos/Walmart.svg" alt="" />
+    </section>
+
+    <!-- * product collection -->
+
+    <section class="popular">
+      <!-- * 1st products -->
+      <h1>Popular Collection</h1>
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/tripod.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 2st products -->
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/mic.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 3rd products -->
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/airpod.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 4th products -->
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/drone.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 5th products -->
+
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/lights.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 6th products -->
+
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/setup.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 7th products -->
+
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/camera.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 8th products -->
+
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/single-light.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <!-- * 9th products -->
+
+      <div class="white-card">
+        <div class="white-card-img">
+          <img src="images/action.png" alt="" />
+        </div>
+        <div class="white-card-text">
+          <h1>Flex Tripod <br />$50.48</h1>
+          <div class="white-card-icon">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <p>4.99</p>
+          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+      </div>
+
+      <h1>
+        See More <span><i class="fas fa-arrow-right"></i></span>
+      </h1>
+    </section>
   </body>
 </html>
