tablet mode added

--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
         <img src="images/main-camera.png" alt="" />
       </div>
 
-      <h1 class="header-heading">Start your Journey as Influencer</h1>
-      <p class="header-text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
-        excepturi, minima nihil repellendus voluptates itaque repudiandae
-        architecto ea error inventore!
-      </p>
-      <a class="btn" href="#"
-        >Preebook now <span><i class="fas fa-arrow-right"></i></span
-      ></a>
+      <div class="header-text">
+        <h1 class="header-heading">Start your Journey as Influencer</h1>
+        <p class="header-text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
+          excepturi, minima nihil repellendus voluptates itaque repudiandae
+          architecto ea error inventore!
+        </p>
+        <a class="btn" href="#"
+          >Preebook now <span><i class="fas fa-arrow-right"></i></span
+        ></a>
+      </div>
     </header>
 
     <!-- * ecommerce section  -->
@@ -58,180 +60,172 @@
     <!-- * product collection -->
 
     <section class="popular">
-      <!-- * 1st products -->
       <h1>Popular Collection</h1>
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/tripod.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+
+      <div class="popular-grid">
+        <!-- * 1st products -->
+        <div class="white-card">
+          <div class="white-card-center">
+            <div class="white-card-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="white-card-text">
+              <h1>Flex Tripod <br />$50.48</h1>
+              <div class="white-card-icon">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+              </div>
+              <p>4.99</p>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
         </div>
-      </div>
-
-      <!-- * 2st products -->
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/mic.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+        <!-- * 2st products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/mic.png" alt="" />
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
-        </div>
-      </div>
-
-      <!-- * 3rd products -->
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/airpod.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+          <div class="white-card-text">
+            <h1>microphone <br />$120.25</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
         </div>
-      </div>
-
-      <!-- * 4th products -->
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/drone.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+        <!-- * 3rd products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/airpod.png" alt="" />
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
-        </div>
-      </div>
-
-      <!-- * 5th products -->
-
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/lights.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+          <div class="white-card-text">
+            <h1>Airbuds <br />$100.00</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
         </div>
-      </div>
-
-      <!-- * 6th products -->
-
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/setup.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+        <!-- * 4th products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/drone.png" alt="" />
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
-        </div>
-      </div>
-
-      <!-- * 7th products -->
-
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/camera.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+          <div class="white-card-text">
+            <h1>Drone <br />$980.25</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
         </div>
-      </div>
-
-      <!-- * 8th products -->
-
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/single-light.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+        <!-- * 5th products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/lights.png" alt="" />
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
-        </div>
-      </div>
-
-      <!-- * 9th products -->
-
-      <div class="white-card">
-        <div class="white-card-img">
-          <img src="images/action.png" alt="" />
-        </div>
-        <div class="white-card-text">
-          <h1>Flex Tripod <br />$50.48</h1>
-          <div class="white-card-icon">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+          <div class="white-card-text">
+            <h1>Light Setup <br />$1200.00</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
-          <p>4.99</p>
-          <p>Wordwide shifting available Buyers protection possible!</p>
+        </div>
+        <!-- * 6th products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/setup.png" alt="" />
+          </div>
+          <div class="white-card-text">
+            <h1>Photoshoot set <br />$820.40</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- * 7th products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/camera.png" alt="" />
+          </div>
+          <div class="white-card-text">
+            <h1>Vlogging Camera <br />$1800.80</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- * 8th products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/single-light.png" alt="" />
+          </div>
+          <div class="white-card-text">
+            <h1>Green Screen <br />$25.48</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
+        </div>
+        <!-- * 9th products -->
+        <div class="white-card">
+          <div class="white-card-img">
+            <img src="images/action.png" alt="" />
+          </div>
+          <div class="white-card-text">
+            <h1>Action Camera <br />$380.00</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
+          </div>
         </div>
       </div>
 
@@ -239,5 +233,22 @@
         See More <span><i class="fas fa-arrow-right"></i></span>
       </h1>
     </section>
+
+    <!-- * footer section -->
+
+    <footer>
+      <h1>Influencer products</h1>
+      <p>
+        Copyright © 2022 influencer products <br />
+        All rights reserved
+      </p>
+
+      <span class="footer-icon">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-linkedin"></i>
+      </span>
+    </footer>
   </body>
 </html>
