--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="images/main-camera.png" alt="" />
       </div>
 
-      <div class="header-text">
+      <div class="header-text-container">
         <h1 class="header-heading">Start your Journey as Influencer</h1>
         <p class="header-text">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
@@ -65,22 +65,20 @@
       <div class="popular-grid">
         <!-- * 1st products -->
         <div class="white-card">
-          <div class="white-card-center">
-            <div class="white-card-img">
-              <img src="images/tripod.png" alt="" />
+          <div class="white-card-img">
+            <img src="images/tripod.png" alt="" />
+          </div>
+          <div class="white-card-text">
+            <h1>Flex Tripod <br />$50.48</h1>
+            <div class="white-card-icon">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
             </div>
-            <div class="white-card-text">
-              <h1>Flex Tripod <br />$50.48</h1>
-              <div class="white-card-icon">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-              </div>
-              <p>4.99</p>
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+            <p>4.99</p>
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
         <!-- * 2st products -->
