media query done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
       <h1 class="nav-heading">Influencer products</h1>
 
+      <div class="nav-text">
+        <p>Home</p>
+        <p>Products</p>
+        <p>Sign up</p>
+        <p>Log In</p>
+      </div>
+
       <span class="fa-lg"><i class="fas fa-cart-arrow-down fa-lg"></i></span>
     </nav>
 
