--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <!-- * stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- * fonts links -->
-    <!-- * font links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <!-- * icons links -->
     <script
       src="https://kit.fontawesome.com/0c9a7543b0.js"
       crossorigin="anonymous"
@@ -42,9 +48,10 @@
       <div class="header-text-container">
         <h1 class="header-heading">Start your Journey as Influencer</h1>
         <p class="header-text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
-          excepturi, minima nihil repellendus voluptates itaque repudiandae
-          architecto ea error inventore!
+          An influencer is someone who has: the power to affect the purchasing
+          decisions of others because of his or her authority, knowledge,
+          position, or relationship with his or her audience. a following in a
+          distinct niche, with whom he or she actively engages.
         </p>
         <a class="btn" href="#"
           >Preebook now <span><i class="fas fa-arrow-right"></i></span
@@ -234,9 +241,31 @@
         </div>
       </div>
 
-      <h1>
+      <h1 class="popular-grid-btn">
         See More <span><i class="fas fa-arrow-right"></i></span>
       </h1>
+    </section>
+
+    <!-- * tour section -->
+
+    <section class="section-about">
+      <h2 class="heading-secondary">tours for adventures people</h2>
+      <div class="section-about-flex">
+        <div class="section-about-text">
+          <h1>you're going to fall in love with nature</h1>
+          <p>
+            Bangladesh is a land made splendid by natural grace - a veritable
+            mosaic in green, verdant and boisterous, with its dedicated and
+            creative people adding color and vibrancy to it. The landscape of
+            Bangladesh, as if, looks like a magical tapestry in green woven
+            intricately by nature.
+          </p>
+        </div>
+
+        <div class="section-about-img">
+          <img src="images/katka-channels.jpg" alt="" />
+        </div>
+      </div>
     </section>
 
     <!-- * footer section -->
