--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
           </div>
         </div>
         <!-- * 9th products -->
+        <!-- * hover effect added -->
         <div class="white-card">
           <div class="white-card-img">
             <img src="images/action.png" alt="" />
@@ -249,7 +250,7 @@
     <!-- * tour section -->
 
     <section class="section-about">
-      <h2 class="heading-secondary">tours for adventures people</h2>
+      <h2 class="heading-secondary">tours for adventures influencer</h2>
       <div class="section-about-flex">
         <div class="section-about-text">
           <h1>you're going to fall in love with nature</h1>
